--- a/浮动布局_横向两列/style.css
+++ b/浮动布局_横向两列/style.css
@@ -29,7 +29,7 @@ h2 span a {
 
 /*wrap这层设置整体的宽度和剧中显示*/
 #wrap {
-    width:50%;
+    width:65%;
     margin: 0 auto;
 }
 /*清除浮动*/
@@ -181,26 +181,26 @@ h2 span a {
 }
 
 .softwerelist1 {
-    background: url("图片资源/小怪兽.jpg") 0 5px no-repeat;
+    background: url("图片资源/backgoundImage.jpg") 0 5px no-repeat;
 }
 .softwerelist2 {
-    background: url("图片资源/myEarthIsYou.jpg") 0 5px no-repeat;
+    background: url("图片资源/backgoundImage.jpg") 0 5px no-repeat;
 }
 .softwerelist3 {
-    background: url("图片资源/myFoult.jpg") 0 5px no-repeat;
+    background: url("图片资源/backgoundImage.jpg") 0 5px no-repeat;
 }
 .softwerelist4 {
-    background: url("图片资源/myFoult.jpg") 0 5px no-repeat;
+    background: url("图片资源/backgoundImage.jpg") 0 5px no-repeat;
 }
 .softwerelist5 {
-    background: url("图片资源/myFoult.jpg") 0 5px no-repeat;
+    background: url("图片资源/backgoundImage.jpg") 0 5px no-repeat;
 }
 .softwerelist6 {
-    background: url("图片资源/myFoult.jpg") 0 5px no-repeat;
+    background: url("图片资源/backgoundImage.jpg") 0 5px no-repeat;
 }
 
 .download {
-    background: url("图片资源/moon.jpg") 0 6px no-repeat;
+    background: url("图片资源/backgoundImage.jpg") 0 6px no-repeat;
     /*上右下左 内边距*/
     padding: 3px 0 0 15px;
 }
@@ -238,22 +238,22 @@ h2 span a {
 }
 
 .soft_r_1 {
-    background: url("图片资源/moon.jpg") 0 5px no-repeat;
+    background: url("图片资源/backgoundImage.jpg") 0 5px no-repeat;
 }
 .soft_r_2 {
-    background: url("图片资源/moon.jpg") 0 5px no-repeat;
+    background: url("图片资源backgoundImage.jpg") 0 5px no-repeat;
 }
 .soft_r_3 {
-    background: url("图片资源/moon.jpg") 0 5px no-repeat;
+    background: url("图片资源/backgoundImage.jpg") 0 5px no-repeat;
 }
 .soft_r_4 {
-    background: url("图片资源/moon.jpg") 0 5px no-repeat;
+    background: url("图片资源/backgoundImage.jpg") 0 5px no-repeat;
 }
 .soft_r_5 {
-    background: url("图片资源/moon.jpg") 0 5px no-repeat;
+    background: url("图片资源/backgoundImage.jpg") 0 5px no-repeat;
 }
 .soft_r_6 {
-    background: url("图片资源/moon.jpg") 0 5px no-repeat;
+    background: url("图片资源/backgoundImage.jpg") 0 5px no-repeat;
 }
 
 .fri_link {
